# neural_networks_project_hdm

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
docs/: dataset_comparison.md  mlp_multivariate_approach.md  population.csv  three_dataset_approaches_comparison.md
models/lstm/: best_lstm_model.pth  best_lstm_model_complete.pth  final_results_summary.txt  fold_metrics.csv  smape_distribution.csv  summary_metrics.csv  ts_key_to_idx.pkl
models/lstm/fold_1/: model_checkpoint.pth  predictions.csv  smape_per_ts.csv
models/lstm/fold_2/: model_checkpoint.pth  (+2 more)
models/rnn/: final_results_summary.txt  fold_metrics.csv  smape_distribution.csv  summary_metrics.csv
models/transformer/: final_results_summary.txt  fold_metrics.csv  smape_distribution.csv  summary_metrics.csv
neuralts/: globals.py  main.py
neuralts/core/: func.py  metrics.py  models.py
neuralts/data_preparation/: data_cleaning.py  data_cleaning_kba.py  fetch_kba.py  gold_dataframe.py  load_consumer_price_index.py  load_deposit_rate.py  load_employment_level.py  load_gdp.py  load_interest_rate.py  load_lending_rate.py  load_oil_prices.py  load_population_income.py  load_sociodemographic_data.py
notebooks/google_colab/: 1_Univariate_One_Hot_Exog.ipynb  2_Multivariate_Exogenous.ipynb  3_Multivariate_Vectorized.ipynb
notebooks/john/: LSTM.ipynb  LSTM.py  LSTM_optimized.py  LSTM_prediction.py  RNN.py  data_exploration.ipynb  data_extraction.ipynb  nixtla_tsdataset.py  run_model.py  run_multivariate.py  run_multivariate_opt.py  run_univariate.py  run_univariate_one_hot.py  run_univariate_opt.py  run_univariate_opt_full.py  run_univariate_opt_full_vec.py  vectorized_batching.py
notebooks/samuel/: run_model.py
report/: 0_0_Problem_Description.md  1_1_Data_Analysis.ipynb  1_1_Data_Sources.ipynb  1_1_KBA_Registration_Data.ipynb  1_2_Economic_Data.ipynb  2_1_Data_Analysis.ipynb  3_10_Chronos_Model.ipynb  3_11_Comparison_of_Models.ipynb  3_1_Modelling_Approach.ipynb  3_1_RNN_Model.ipynb  3_2_LSTM_Model.ipynb  3_2_RNN_Model.ipynb  3_3_GRU_Model.ipynb  3_3_LSTM_Model.ipynb  3_4_GRU_Model.ipynb  3_4_NBEATSx_Model.ipynb  3_5_TFT_Model.ipynb  3_5_Transformers.ipynb  3_6_CNN_1D.ipynb  3_6_NHITS_Model.ipynb  3_7_Chronos_Model.ipynb  3_7_NBEATSx_Model.ipynb  3_8_NHITS_Model.ipynb  3_8_TimesFM_Model.ipynb  3_9_Comparison_of_Models.ipynb  3_9_TFT_Model.ipynb  4_1_Results_and_Conclusion.ipynb  _config.yml  _toc.yml  readme.md
(+28 files in other folders)
