[project]
name = "neuralts"
version = "0.0.1"
description = "Timeseries Forecasting with multiple TS architectures"
authors = [
  { name = "John Torres, Samuel Hempelt" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["neuralts"]
force_sort_within_sections = true

