[project]
name = "neuralts"
version = "0.0.1"
description = "Timeseries Forecasting with multiple TS architectures"
authors = [
  { name = "John Torres, Samuel Hempelt" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "jupyter-book<2",
    "jupyterlab>=4.5.0",
    "neuralforecast>=3.1.2",
    "openpyxl>=3.1.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neuralts", "neuralts.core", "neuralts.data_preparation"]

